--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "react-node-js-file-encryption-api",
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
